# firebase

./: LICENSE  README.md  circle.yml  firebase.cabal  stack.yaml
src/Database/: Firebase.hs
src/Database/Firebase/: Types.hs
test/: Main.hs
