name:                firebase
version:             0.2.0
synopsis:            Firebase REST client
description:         Firebase REST client
homepage:            https://github.com/collegevine/firebase#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Collegevine
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -XConstraintKinds
  exposed-modules:     Database.Firebase.Types, Database.Firebase
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2.2.1
                     , mtl >= 2.1.3.1
                     , bytestring >= 0.10.6.0
                     , lens >= 4.13
                     , aeson >= 0.9.0.1
                     , http-types >= 0.9
                     , nano-http >= 0.1.1
  default-language:    Haskell2010

test-suite firebase-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , firebase
                     , mtl >= 2.1.3.1
                     , lens >= 4.13
                     , aeson >= 0.9.0.1
                     , nano-http >= 0.1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/firebase
